// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package daml.platform.apiserver;

option java_package = "com.daml.platform.apiserver";


// Describes the payload of a page token for listing users.
// Not intended to be handled directly by clients and should be presented to them as an opaque string.
message ListUsersPageTokenPayload {
    // Users are ordered by ``user_id``, and the next page starts with users whose ``user_id`` is larger than ``user_id_lower_bound_excl``.
    string user_id_lower_bound_excl = 1;
}
